--- a/about.html
+++ b/about.html
@@ -15,25 +15,53 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
-
-    <p>Hey，我是<strong>柏荧(BY)</strong>，一只iOS程序猿，现在厦门工作。</p>
-
-    <p>工作、学习之余，我还是一个健身爱好者，同时也非常喜欢拳击。</p>
-
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a> 与 简书主页<a href="https://http://www.jianshu.com/u/e71990ada2fd">👉BY</a>。如果有什么问题，欢迎提出探讨~</p>
-
-    <p></p>
-    
-    <h5>Talks</h5>
-
-    <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li>
-        <li><a href="http://huangxuan.me/">Hux</a></li> 
-        <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
-    </ul>
+<h2>Jun-Sky</h2>
+<p>这是一个<strong>航拍</strong>分享站，你可以在这里<strong>发布作品</strong>。</p>
+<p>我会在这里分享<strong>剪辑</strong>，<strong>作品</strong>，<strong>技巧</strong>等内容。</p>
+<p>如果你喜欢这个网站，可以 <code>Ctrl+D</code> / <code>Command+D</code> 收藏本站，这是对我们的鼓励。</p>
+<hr>
+<h2>开放平台</h2>
+<p><strong>Jun-Sky</strong> 是一个开放平台，你可以向我们投稿您的作品与文档。</p>
+<h3>投稿</h3>
+<p>投稿方式：<strong>发送邮件至 <a href="mailto:sky@r3r.top">sky@r3r.top</a></strong></p>
+<p>邮件主题*：<strong>[Jun-Sky]投稿</strong></p>
+<p>邮件内容*</p>
+<pre><code class="language-shell" lang="shell">title：《我的航拍作品》  #标题
+subtitle: 这是我的航拍作品 #副标题
+date: 2020-05-01              # 时间
+author: Jun-Sky                      # 作者
+id: 01   # 作者ID(注册时领取)
+passwd: 123456 # 作者密码
+header-img: post-bg-2015.jpg    # 文章标题背景图片，图片链接(可随附件)
+tags:  航拍,无人机                             # 标签
+video: video.mp4           # 视频，仅支持 mp4 文件，须有链接或附件
+</code></pre>
+<p>静候审核</p>
+<hr>
+<h3>删除</h3>
+<p>删除方式：<strong>发送邮件至 <a href="mailto:sky@r3r.top">sky@r3r.top</a></strong></p>
+<p>邮件主题*：<strong>[Jun-Sky]删除</strong></p>
+<p>邮件内容*</p>
+<pre><code class="language-shell" lang="shell">title：《我的航拍作品》  #标题
+post-id/post-link: 123456 #作品ID或作品链接
+date: 2020-05-01              # 时间
+author: Jun-Sky                      # 作者
+id: 01   # 作者ID(注册时领取)
+passwd: 123456 # 作者密码
+</code></pre>
+<p>静候审核</p>
+<hr>
+<h3>注册</h3>
+<p>注册方式：<strong>发送邮件至 <a href="mailto:sky@r3r.top">sky@r3r.top</a></strong></p>
+<p>邮件主题*：<strong>[Jun-Sky]注册</strong></p>
+<p>邮件内容*</p>
+<pre><code class="language-shell" lang="shell">author: Jun-Sky                      # 作者名
+passwd: 123456 # 作者密码
+</code></pre>
+<p>静候审核</p>
+<hr>
+<h2>感谢您的支持</h2>
+<p>&nbsp;</p>
 </div>
 
 <!-- English Version -->
